@@ -25,6 +25,7 @@ import org.apache.s2graph.core.storage.StorageDeserializable._
 import org.apache.s2graph.core.storage.{CanSKeyValue, Deserializable, SKeyValue, StorageDeserializable}
 import org.apache.s2graph.core.types._
 import org.apache.s2graph.core.{GraphUtil, IndexEdge, QueryParam, Vertex}
+import scala.collection.immutable
 
 import scala.collection.immutable
 
@@ -77,7 +78,7 @@ class IndexEdgeDeserializable(bytesToLongFunc: (Array[Byte], Int) => Long = byte
 
    override def fromKeyValuesInner[T: CanSKeyValue](queryParam: QueryParam,
                                                     _kvs: Seq[T],
-                                                    version: String,
+                                                    schemaVer: String,
                                                     cacheElementOpt: Option[IndexEdge]): IndexEdge = {
 
      assert(_kvs.size == 1)
@@ -85,10 +86,10 @@ class IndexEdgeDeserializable(bytesToLongFunc: (Array[Byte], Int) => Long = byte
      val kvs = _kvs.map { kv => implicitly[CanSKeyValue[T]].toSKeyValue(kv) }
 
      val kv = kvs.head
-
+     val version = kv.timestamp
      //    logger.debug(s"[Des]: ${kv.row.toList}, ${kv.qualifier.toList}, ${kv.value.toList}")
      var pos = 0
-     val (srcVertexId, srcIdLen) = SourceVertexId.fromBytes(kv.row, pos, kv.row.length, version)
+     val (srcVertexId, srcIdLen) = SourceVertexId.fromBytes(kv.row, pos, kv.row.length, schemaVer)
      pos += srcIdLen
      val labelWithDir = LabelWithDirection(Bytes.toInt(kv.row, pos, 4))
      pos += 4
@@ -103,55 +104,59 @@ class IndexEdgeDeserializable(bytesToLongFunc: (Array[Byte], Int) => Long = byte
        //      val degreeVal = Bytes.toLong(kv.value)
        val degreeVal = bytesToLongFunc(kv.value, 0)
        val ts = kv.timestamp
-       val props = Map(LabelMeta.timeStampSeq -> InnerVal.withLong(ts, version),
-         LabelMeta.degreeSeq -> InnerVal.withLong(degreeVal, version))
-       val tgtVertexId = VertexId(HBaseType.DEFAULT_COL_ID, InnerVal.withStr("0", version))
+       val props = Map(LabelMeta.timeStampSeq -> InnerValLikeWithTs.withLong(ts, ts, schemaVer),
+         LabelMeta.degreeSeq -> InnerValLikeWithTs.withLong(degreeVal, ts, schemaVer))
+       val tgtVertexId = VertexId(HBaseType.DEFAULT_COL_ID, InnerVal.withStr("0", schemaVer))
        IndexEdge(Vertex(srcVertexId, ts), Vertex(tgtVertexId, ts), labelWithDir, op, ts, labelIdxSeq, props)
      } else {
        // not degree edge
 
-       val (idxPropsRaw, endAt) = bytesToProps(kv.row, pos, version)
+
+       val (idxPropsRaw, endAt) = bytesToProps(kv.row, pos, schemaVer)
        pos = endAt
        val (tgtVertexIdRaw, tgtVertexIdLen) = if (endAt == kv.row.length) {
          (HBaseType.defaultTgtVertexId, 0)
        } else {
-         TargetVertexId.fromBytes(kv.row, endAt, kv.row.length, version)
+         TargetVertexId.fromBytes(kv.row, endAt, kv.row.length, schemaVer)
        }
 
-       val allProps = immutable.Map.newBuilder[Byte, InnerValLike]
-       /** process index props */
+
+       val allProps = immutable.Map.newBuilder[Byte, InnerValLikeWithTs]
        val index = queryParam.label.indicesMap.getOrElse(labelIdxSeq, throw new RuntimeException(s"invalid index seq: ${queryParam.label.id.get}, ${labelIdxSeq}"))
 
+       /** process indexProps */
        for {
          (seq, (k, v)) <- index.metaSeqs.zip(idxPropsRaw)
        } {
-         if (k == LabelMeta.degreeSeq) allProps += k -> v
-         else allProps += seq -> v
+         if (k == LabelMeta.degreeSeq) allProps += k -> InnerValLikeWithTs(v, version)
+         else allProps += seq -> InnerValLikeWithTs(v, version)
        }
+
        /** process props */
        if (op == GraphUtil.operations("incrementCount")) {
          //        val countVal = Bytes.toLong(kv.value)
          val countVal = bytesToLongFunc(kv.value, 0)
-         allProps += (LabelMeta.countSeq -> InnerVal.withLong(countVal, version))
+         allProps += (LabelMeta.countSeq -> InnerValLikeWithTs.withLong(countVal, version, schemaVer))
        } else {
-         val (props, endAt) = bytesToKeyValues(kv.value, 0, kv.value.length, version)
+         val (props, endAt) = bytesToKeyValues(kv.value, 0, kv.value.length, schemaVer)
          props.foreach { case (k, v) =>
-           allProps += (k -> v)
+           allProps += (k -> InnerValLikeWithTs(v, version))
          }
        }
        val _mergedProps = allProps.result()
        val mergedProps =
          if (_mergedProps.contains(LabelMeta.timeStampSeq)) _mergedProps
-         else _mergedProps + (LabelMeta.timeStampSeq -> InnerVal.withLong(kv.timestamp, version))
+         else _mergedProps + (LabelMeta.timeStampSeq -> InnerValLikeWithTs.withLong(version, version, schemaVer))
 
+       /** process tgtVertexId */
        val tgtVertexId =
          mergedProps.get(LabelMeta.toSeq) match {
            case None => tgtVertexIdRaw
-           case Some(vId) => TargetVertexId(HBaseType.DEFAULT_COL_ID, vId)
+           case Some(vId) => TargetVertexId(HBaseType.DEFAULT_COL_ID, vId.innerVal)
          }
 
-       val ts = kv.timestamp
-       IndexEdge(Vertex(srcVertexId, ts), Vertex(tgtVertexId, ts), labelWithDir, op, ts, labelIdxSeq, mergedProps)
+
+       IndexEdge(Vertex(srcVertexId, version), Vertex(tgtVertexId, version), labelWithDir, op, version, labelIdxSeq, mergedProps)
 
      }
    }
