@@ -24,6 +24,7 @@ import org.apache.s2graph.core.storage.StorageDeserializable._
 import org.apache.s2graph.core.storage._
 import org.apache.s2graph.core.types._
 import org.apache.s2graph.core.{GraphUtil, IndexEdge, QueryParam, Vertex}
+import scala.collection.immutable
 
 import scala.collection.immutable
 
@@ -76,63 +77,60 @@ class IndexEdgeDeserializable(bytesToLongFunc: (Array[Byte], Int) => Long = byte
 
    override def fromKeyValuesInner[T: CanSKeyValue](queryParam: QueryParam,
                                                     _kvs: Seq[T],
-                                                    version: String,
+                                                    schemaVer: String,
                                                     cacheElementOpt: Option[IndexEdge]): IndexEdge = {
      assert(_kvs.size == 1)
 
      val kvs = _kvs.map { kv => implicitly[CanSKeyValue[T]].toSKeyValue(kv) }
 
      val kv = kvs.head
+     val version = kv.timestamp
+
      val (srcVertexId, labelWithDir, labelIdxSeq, _, _) = cacheElementOpt.map { e =>
        (e.srcVertex.id, e.labelWithDir, e.labelIndexSeq, false, 0)
-     }.getOrElse(parseRow(kv, version))
+     }.getOrElse(parseRow(kv, schemaVer))
 
      val (idxPropsRaw, tgtVertexIdRaw, op, tgtVertexIdInQualifier, _) =
-       if (kv.qualifier.isEmpty) parseDegreeQualifier(kv, version)
-       else parseQualifier(kv, version)
+       if (kv.qualifier.isEmpty) parseDegreeQualifier(kv, schemaVer)
+       else parseQualifier(kv, schemaVer)
 
-     val allProps = immutable.Map.newBuilder[Byte, InnerValLike]
-
-     /** process index props */
+     val allProps = immutable.Map.newBuilder[Byte, InnerValLikeWithTs]
      val index = queryParam.label.indicesMap.getOrElse(labelIdxSeq, throw new RuntimeException(s"invalid index seq: ${queryParam.label.id.get}, ${labelIdxSeq}"))
+
+     /** process indexProps */
      for {
        (seq, (k, v)) <- index.metaSeqs.zip(idxPropsRaw)
      } {
-       if (k == LabelMeta.degreeSeq) allProps += k -> v
-       else allProps += seq -> v
+       if (k == LabelMeta.degreeSeq) allProps += k -> InnerValLikeWithTs(v, version)
+       else allProps += seq -> InnerValLikeWithTs(v, version)
      }
 
      /** process props */
      if (op == GraphUtil.operations("incrementCount")) {
        //      val countVal = Bytes.toLong(kv.value)
        val countVal = bytesToLongFunc(kv.value, 0)
-       allProps += (LabelMeta.countSeq -> InnerVal.withLong(countVal, version))
+       allProps += (LabelMeta.countSeq -> InnerValLikeWithTs.withLong(countVal, version, schemaVer))
      } else if (kv.qualifier.isEmpty) {
        val countVal = bytesToLongFunc(kv.value, 0)
-       allProps += (LabelMeta.degreeSeq -> InnerVal.withLong(countVal, version))
+       allProps += (LabelMeta.degreeSeq -> InnerValLikeWithTs.withLong(countVal, version, schemaVer))
      } else {
-       val (props, endAt) = bytesToKeyValues(kv.value, 0, kv.value.length, version)
-       props.foreach { case (k, v) =>
-         allProps += (k -> v)
-       }
+       val (props, _) = bytesToKeyValues(kv.value, 0, kv.value.length, schemaVer)
+       props.foreach { case (k, v) => allProps += (k -> InnerValLikeWithTs(v, version)) }
      }
 
      val _mergedProps = allProps.result()
      val mergedProps =
        if (_mergedProps.contains(LabelMeta.timeStampSeq)) _mergedProps
-       else _mergedProps + (LabelMeta.timeStampSeq -> InnerVal.withLong(kv.timestamp, version))
+            else _mergedProps + (LabelMeta.timeStampSeq -> InnerValLikeWithTs.withLong(version, version, schemaVer))
 
-     val tgtVertexId = if (tgtVertexIdInQualifier) {
+     /** process tgtVertexId */
+     val tgtVertexId =
        mergedProps.get(LabelMeta.toSeq) match {
          case None => tgtVertexIdRaw
-         case Some(vId) => TargetVertexId(HBaseType.DEFAULT_COL_ID, vId)
+         case Some(vId) => TargetVertexId(HBaseType.DEFAULT_COL_ID, vId.innerVal)
        }
-     } else tgtVertexIdRaw
-     //    logger.error(s"$mergedProps")
-     //    val ts = mergedProps(LabelMeta.timeStampSeq).toString().toLong
 
-     val ts = kv.timestamp
-     IndexEdge(Vertex(srcVertexId, ts), Vertex(tgtVertexId, ts), labelWithDir, op, ts, labelIdxSeq, mergedProps)
+     IndexEdge(Vertex(srcVertexId, version), Vertex(tgtVertexId, version), labelWithDir, op, version, labelIdxSeq, mergedProps)
 
    }
  }
